@@ -9,6 +9,7 @@
 "Album gain":"",
 "Albums":"",
 "All Artists":"",
+"Already in favorites":"",
 "Append random album to queue":"",
 "Append to queue":"",
 "Appended '%1' to the play queue":"",
