@@ -1,10 +1,153 @@
 {
 "Add to favorites":"Add to favourites",
 "Added to favorites":"Added to favourites",
+"Alarm settings":"",
+"Alarms":"",
+"Album":"",
+"Album Artists":"",
+"Album Review":"",
+"Album gain":"",
+"Albums":"",
+"All Artists":"",
+"Already in favorites":"Already in favourites",
+"Append random album to queue":"",
+"Append to queue":"",
+"Appended '%1' to the play queue":"",
+"Apps":"",
+"Artist Biography":"",
+"Artist, Album":"",
+"Artist, Year, Album":"",
+"Artists":"",
+"Audio":"",
+"Auto-scroll to current track":"",
+"Browse":"",
+"Cancel":"",
+"Clear":"",
+"Close":"",
+"Compilations":"",
+"Composers":"",
+"Conductors":"",
+"Create":"",
+"Create Alarm":"",
+"Crossfade":"",
+"Current play queue":"",
+"Days":"",
+"Default":"",
+"Delete":"",
+"Delete '%1'?":"",
+"Delete alarm?":"",
+"Do not sync":"",
+"Don't know how to handle this!":"",
+"Don't shuffle":"",
+"Edit Alarm":"",
+"Extra browse modes":"",
+"Fade in":"",
+"Fade in and out":"",
+"Fade out":"",
+"Failed":"",
 "Failed to add to favorites!":"Failed to add to favourites!",
+"Failed to delete playlist!":"",
+"Failed to find an album!":"",
 "Failed to remove favorite!":"Failed to remove favourite!",
+"Failed to retrieve listing. (%1)":"",
+"Failed to save play queue!":"",
 "Favorites":"Favourites",
+"Fetching...":"",
+"Fri":"",
+"Friday":"",
+"General":"",
+"Genres":"",
+"Library":"",
+"Looking for players...":"",
+"Lyrics":"",
+"Manage player groups":"",
+"Mon":"",
+"Monday":"",
+"More":"",
+"Move to next in queue":"",
+"My Music":"",
+"Name":"",
+"New Music":"",
+"No Player":"",
+"No fade":"",
+"None":"",
+"Nothing playing":"",
+"OK":"",
+"Options":"",
+"Other Music":"",
+"Play now":"",
+"Player Settings":"",
+"Playing":"",
+"Playlists":"",
+"Queue":"",
+"Radio":"",
+"Random Mix":"",
+"Remove":"",
 "Remove '%1' from favorites?":"Remove '%1' from favourites?",
+"Remove all tracks from queue?":"",
 "Remove from favorites":"Remove from favourites",
-"Rename favorite":"Rename favourite"
+"Remove from queue":"",
+"Rename":"",
+"Rename favorite":"Rename favourite",
+"Rename playlist":"",
+"Renamed failed":"",
+"Repeat":"",
+"Sat":"",
+"Saturday":"",
+"Save":"",
+"Save play queue":"",
+"Scheduled alarms":"",
+"Search":"",
+"Select which other player you would like to synchronise playback with.":"",
+"Server Settings":"",
+"Settings":"",
+"Show information":"",
+"Shuffle":"",
+"Shuffle by album":"",
+"Shuffle by song":"",
+"Smart gain":"",
+"Snooze (minutes)":"",
+"Something went wrong!":"",
+"Sort album list by":"",
+"Sort albums under artists by":"",
+"Sound":"",
+"Start time":"",
+"Sun":"",
+"Sunday":"",
+"Switch Off":"",
+"Switch off '%1'?":"",
+"Synchronise":"",
+"Synchronise with":"",
+"Thurs":"",
+"Thursday":"",
+"Timeout (minutes)":"",
+"Total: %1":"",
+"Track gain":"",
+"Tracks":"",
+"Tues":"",
+"Tuesday":"",
+"Unknown":"",
+"Use dark theme":"",
+"Volume (%)":"",
+"Wednesday":"",
+"Weds":"",
+"Year, Album":"",
+"Year, Artist, Album":"",
+"Years":"",
+"1 Album":"",
+"%1 Albums":"",
+"1 App":"",
+"%1 Apps":"",
+"1 Artist":"",
+"%1 Artists":"",
+"1 Genre":"",
+"%1 Genres":"",
+"1 Playlist":"",
+"%1 Playlists":"",
+"1 Track":"",
+"%1 Tracks":"",
+"1 Year":"",
+"%1 Years":"",
+"Newest Album":"",
+"%1 Newest Albums":""
 }
